--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link href="assests/css/menu.css" rel="stylesheet" type="text/css">
-    <title>Patiserie di Paris</title>
+    <title>Gateauomega</title>
 </head>
 
 <body>
