--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,7 @@
 
 <body>
     <header><!-- Aqui está disposto o menu de navegação entre as páginas do site -->
-        <iframe src="layouts/header.html" position="fixed" scrolling="no" width="100%"></iframe>
+        <iframe src="layouts/header.html" position="fixed" scroll="no" width="100%" id="ifooter"></iframe>
     </header>
     <article id="art1"><!-- Aqui ficará a promoção principal (petit gateau) -->
         <section id="promo1">
@@ -287,7 +287,7 @@
         </article>
     </main>
     <footer>
-        <iframe src="layouts/footer.html" width="100%" frameborder="no"></iframe>
+        <iframe src="layouts/footer.html" width="100%" frameborder="no" id="ifooter" scroll="no"></iframe>
     </footer>
 </body>
 
